antlr/YAPLParser.py
# Generated from antlr\YAPL.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPLParser ( Parser ):

    grammarFileName = "YAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'false'", "'true'", 
                     "'self'", "'SELF_TYPE'", "'Bool'", "'Int'", "'String'", 
                     "'void'", "';'", "':'", "'{'", "'}'", "'['", "']'", 
                     "'('", "')'", "','", "'\"'", "'''", "'+'", "'-'", "'*'", 
                     "'/'", "'~'", "'<'", "'<='", "'='", "'.'", "'@'", "'<-'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "ELSE", "FI", "IF", "IN", "INHERITS", 
                      "ISVOID", "LOOP", "POOL", "THEN", "WHILE", "NEW", 
                      "NOT", "LET", "FALSE", "TRUE", "SELF", "SELF_TYPE", 
                      "BOOL", "INT", "STRING", "VOID", "SEMICOLON", "COLON", 
                      "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "LPAR", 
                      "RPAR", "COMMA", "QUOTES", "APOSTROPHE", "ADD", "SUB", 
                      "MULTIPLY", "DIVIDE", "NEGATION", "LESS_OP", "LESS_EQ_OP", 
                      "EQUAL_OP", "DOT", "AT", "ASIGN", "TYPE_ID", "OBJ_ID", 
                      "INTEGER", "DIGIT", "STRING_LIT", "BOOL_LIT", "COMMENT", 
                      "OTHER_COMMENT", "NEWLINE", "WHITESPACE", "ERR_TOKEN" ]

    RULE_program = 0
    RULE_class = 1
    RULE_feature = 2
    RULE_expr = 3
    RULE_var_type = 4
    RULE_var_id = 5
    RULE_return_type = 6

    ruleNames =  [ "program", "class", "feature", "expr", "var_type", "var_id", 
                   "return_type" ]

    EOF = Token.EOF
    CLASS=1
    ELSE=2
    FI=3
    IF=4
    IN=5
    INHERITS=6
    ISVOID=7
    LOOP=8
    POOL=9
    THEN=10
    WHILE=11
    NEW=12
    NOT=13
    LET=14
    FALSE=15
    TRUE=16
    SELF=17
    SELF_TYPE=18
    BOOL=19
    INT=20
    STRING=21
    VOID=22
    SEMICOLON=23
    COLON=24
    LBRACE=25
    RBRACE=26
    LBRACKET=27
    RBRACKET=28
    LPAR=29
    RPAR=30
    COMMA=31
    QUOTES=32
    APOSTROPHE=33
    ADD=34
    SUB=35
    MULTIPLY=36
    DIVIDE=37
    NEGATION=38
    LESS_OP=39
    LESS_EQ_OP=40
    EQUAL_OP=41
    DOT=42
    AT=43
    ASIGN=44
    TYPE_ID=45
    OBJ_ID=46
    INTEGER=47
    DIGIT=48
    STRING_LIT=49
    BOOL_LIT=50
    COMMENT=51
    OTHER_COMMENT=52
    NEWLINE=53
    WHITESPACE=54
    ERR_TOKEN=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ClassContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ClassContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMICOLON)
            else:
                return self.getToken(YAPLParser.SEMICOLON, i)

        def getRuleIndex(self):
            return YAPLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = YAPLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.class_()
                self.state = 15
                self.match(YAPLParser.SEMICOLON)
                self.state = 19 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==YAPLParser.CLASS):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YAPLParser.CLASS, 0)

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Var_typeContext,i)


        def LBRACE(self):
            return self.getToken(YAPLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(YAPLParser.RBRACE, 0)

        def INHERITS(self):
            return self.getToken(YAPLParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FeatureContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass" ):
                listener.enterClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass" ):
                listener.exitClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass" ):
                return visitor.visitClass(self)
            else:
                return visitor.visitChildren(self)




    def class_(self):

        localctx = YAPLParser.ClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.match(YAPLParser.CLASS)
            self.state = 22
            self.var_type()
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YAPLParser.INHERITS:
                self.state = 23
                self.match(YAPLParser.INHERITS)
                self.state = 24
                self.var_type()


            self.state = 27
            self.match(YAPLParser.LBRACE)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==YAPLParser.SELF or _la==YAPLParser.OBJ_ID:
                self.state = 28
                self.feature()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(YAPLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_feature

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Class_methodContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Var_idContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Var_idContext,i)

        def LPAR(self):
            return self.getToken(YAPLParser.LPAR, 0)
        def RPAR(self):
            return self.getToken(YAPLParser.RPAR, 0)
        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COLON)
            else:
                return self.getToken(YAPLParser.COLON, i)
        def return_type(self):
            return self.getTypedRuleContext(YAPLParser.Return_typeContext,0)

        def LBRACE(self):
            return self.getToken(YAPLParser.LBRACE, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)

        def RBRACE(self):
            return self.getToken(YAPLParser.RBRACE, 0)
        def SEMICOLON(self):
            return self.getToken(YAPLParser.SEMICOLON, 0)
        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Var_typeContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_method" ):
                listener.enterClass_method(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_method" ):
                listener.exitClass_method(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_method" ):
                return visitor.visitClass_method(self)
            else:
                return visitor.visitChildren(self)


    class Class_attributeContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_id(self):
            return self.getTypedRuleContext(YAPLParser.Var_idContext,0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)
        def var_type(self):
            return self.getTypedRuleContext(YAPLParser.Var_typeContext,0)

        def SEMICOLON(self):
            return self.getToken(YAPLParser.SEMICOLON, 0)
        def ASIGN(self):
            return self.getToken(YAPLParser.ASIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_attribute" ):
                listener.enterClass_attribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_attribute" ):
                listener.exitClass_attribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_attribute" ):
                return visitor.visitClass_attribute(self)
            else:
                return visitor.visitChildren(self)



    def feature(self):

        localctx = YAPLParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = YAPLParser.Class_methodContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.var_id()
                self.state = 37
                self.match(YAPLParser.LPAR)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPLParser.SELF or _la==YAPLParser.OBJ_ID:
                    self.state = 38
                    self.var_id()
                    self.state = 39
                    self.match(YAPLParser.COLON)
                    self.state = 40
                    self.var_type()
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==YAPLParser.COMMA:
                        self.state = 41
                        self.match(YAPLParser.COMMA)
                        self.state = 42
                        self.var_id()
                        self.state = 43
                        self.match(YAPLParser.COLON)
                        self.state = 44
                        self.var_type()
                        self.state = 50
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 53
                self.match(YAPLParser.RPAR)
                self.state = 54
                self.match(YAPLParser.COLON)
                self.state = 55
                self.return_type()
                self.state = 56
                self.match(YAPLParser.LBRACE)
                self.state = 57
                self.expr(0)
                self.state = 58
                self.match(YAPLParser.RBRACE)
                self.state = 59
                self.match(YAPLParser.SEMICOLON)
                pass

            elif la_ == 2:
                localctx = YAPLParser.Class_attributeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.var_id()
                self.state = 62
                self.match(YAPLParser.COLON)
                self.state = 63
                self.var_type()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPLParser.ASIGN:
                    self.state = 64
                    self.match(YAPLParser.ASIGN)
                    self.state = 65
                    self.expr(0)


                self.state = 68
                self.match(YAPLParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YAPLParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Neg_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEGATION(self):
            return self.getToken(YAPLParser.NEGATION, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeg_expr" ):
                listener.enterNeg_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeg_expr" ):
                listener.exitNeg_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNeg_expr" ):
                return visitor.visitNeg_expr(self)
            else:
                return visitor.visitChildren(self)


    class Int_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(YAPLParser.INTEGER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt_expr" ):
                listener.enterInt_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt_expr" ):
                listener.exitInt_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt_expr" ):
                return visitor.visitInt_expr(self)
            else:
                return visitor.visitChildren(self)


    class Par_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAR(self):
            return self.getToken(YAPLParser.LPAR, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)

        def RPAR(self):
            return self.getToken(YAPLParser.RPAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPar_expr" ):
                listener.enterPar_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPar_expr" ):
                listener.exitPar_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPar_expr" ):
                return visitor.visitPar_expr(self)
            else:
                return visitor.visitChildren(self)


    class True_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(YAPLParser.TRUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrue_expr" ):
                listener.enterTrue_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrue_expr" ):
                listener.exitTrue_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrue_expr" ):
                return visitor.visitTrue_expr(self)
            else:
                return visitor.visitChildren(self)


    class Add_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def ADD(self):
            return self.getToken(YAPLParser.ADD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd_expr" ):
                listener.enterAdd_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd_expr" ):
                listener.exitAdd_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd_expr" ):
                return visitor.visitAdd_expr(self)
            else:
                return visitor.visitChildren(self)


    class Assign_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_id(self):
            return self.getTypedRuleContext(YAPLParser.Var_idContext,0)

        def ASIGN(self):
            return self.getToken(YAPLParser.ASIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_expr" ):
                listener.enterAssign_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_expr" ):
                listener.exitAssign_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_expr" ):
                return visitor.visitAssign_expr(self)
            else:
                return visitor.visitChildren(self)


    class New_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(YAPLParser.NEW, 0)
        def var_type(self):
            return self.getTypedRuleContext(YAPLParser.Var_typeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNew_expr" ):
                listener.enterNew_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNew_expr" ):
                listener.exitNew_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNew_expr" ):
                return visitor.visitNew_expr(self)
            else:
                return visitor.visitChildren(self)


    class Expr_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def DOT(self):
            return self.getToken(YAPLParser.DOT, 0)
        def var_id(self):
            return self.getTypedRuleContext(YAPLParser.Var_idContext,0)

        def LPAR(self):
            return self.getToken(YAPLParser.LPAR, 0)
        def RPAR(self):
            return self.getToken(YAPLParser.RPAR, 0)
        def AT(self):
            return self.getToken(YAPLParser.AT, 0)
        def var_type(self):
            return self.getTypedRuleContext(YAPLParser.Var_typeContext,0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_expr" ):
                listener.enterExpr_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_expr" ):
                listener.exitExpr_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_expr" ):
                return visitor.visitExpr_expr(self)
            else:
                return visitor.visitChildren(self)


    class Let_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(YAPLParser.LET, 0)
        def var_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Var_idContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Var_idContext,i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COLON)
            else:
                return self.getToken(YAPLParser.COLON, i)
        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Var_typeContext,i)

        def IN(self):
            return self.getToken(YAPLParser.IN, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def ASIGN(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.ASIGN)
            else:
                return self.getToken(YAPLParser.ASIGN, i)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLet_expr" ):
                listener.enterLet_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLet_expr" ):
                listener.exitLet_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLet_expr" ):
                return visitor.visitLet_expr(self)
            else:
                return visitor.visitChildren(self)


    class Div_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def DIVIDE(self):
            return self.getToken(YAPLParser.DIVIDE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiv_expr" ):
                listener.enterDiv_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiv_expr" ):
                listener.exitDiv_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiv_expr" ):
                return visitor.visitDiv_expr(self)
            else:
                return visitor.visitChildren(self)


    class LessEq_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def LESS_EQ_OP(self):
            return self.getToken(YAPLParser.LESS_EQ_OP, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLessEq_expr" ):
                listener.enterLessEq_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLessEq_expr" ):
                listener.exitLessEq_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessEq_expr" ):
                return visitor.visitLessEq_expr(self)
            else:
                return visitor.visitChildren(self)


    class Void_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(YAPLParser.ISVOID, 0)
        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVoid_expr" ):
                listener.enterVoid_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVoid_expr" ):
                listener.exitVoid_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVoid_expr" ):
                return visitor.visitVoid_expr(self)
            else:
                return visitor.visitChildren(self)


    class method_callContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_id(self):
            return self.getTypedRuleContext(YAPLParser.Var_idContext,0)

        def LPAR(self):
            return self.getToken(YAPLParser.LPAR, 0)
        def RPAR(self):
            return self.getToken(YAPLParser.RPAR, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_call" ):
                listener.enterMethod_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_call" ):
                listener.exitMethod_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_call" ):
                return visitor.visitMethod_call(self)
            else:
                return visitor.visitChildren(self)


    class Conditional_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(YAPLParser.IF, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)

        def THEN(self):
            return self.getToken(YAPLParser.THEN, 0)
        def ELSE(self):
            return self.getToken(YAPLParser.ELSE, 0)
        def FI(self):
            return self.getToken(YAPLParser.FI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional_expr" ):
                listener.enterConditional_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional_expr" ):
                listener.exitConditional_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional_expr" ):
                return visitor.visitConditional_expr(self)
            else:
                return visitor.visitChildren(self)


    class Loop_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YAPLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(YAPLParser.WHILE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)
